# nbody-sim

./: CMakeLists.txt  README.md
include/: particle.hpp  renderer.hpp  simulator.hpp
include/glad/: glad.h
src/: glad.c  main.cpp  renderer.cpp  simulator.cpp
